compiler-core/src/docs/snapshots/gleam_core__docs__tests__generated_type_variables.snap
---
source: compiler-core/src/docs/tests.rs
expression: output
---
---- SOURCE CODE
-- main.gleam

pub fn wibble(_a, _b, _c, _d) {
  todo
}


---- VALUES

--- wibble
<pre><code>pub fn wibble(a: a, b: b, c: c, d: d) -> e</code></pre>
