compiler-core/src/docs/snapshots/gleam_core__docs__tests__generated_type_variables_mixed_with_existing_variables.snap
---
source: compiler-core/src/docs/tests.rs
expression: output
---
---- SOURCE CODE
-- main.gleam

pub fn wibble(_a: b, _b: a, _c, _d) {
  todo
}


---- VALUES

--- wibble
<pre><code>pub fn wibble(a: b, b: a, c: c, d: d) -> e</code></pre>
