compiler-core/src/docs/snapshots/gleam_core__docs__tests__generated_type_variables_with_existing_variables_coming_afterwards.snap
---
source: compiler-core/src/docs/tests.rs
expression: output
---
---- VALUES

--- wibble
<pre><code>pub fn wibble(a: c, b: d, c: b, d: a) -> e</code></pre>
