compiler-core/src/docs/snapshots/gleam_core__docs__tests__highlight_constant_definition.snap
---
source: compiler-core/src/docs/tests.rs
expression: output
---
---- VALUES

--- x
<pre><code><span class="hljs-keyword">pub const </span><span class="hljs-title">x</span>: <span class="hljs-title">Int</span></code></pre>
