compiler-core/src/docs/snapshots/gleam_core__docs__tests__highlight_custom_type.snap
---
source: compiler-core/src/docs/tests.rs
expression: output
---
---- TYPES

--- Wibble
<pre><code><span class="hljs-keyword">pub </span><span class="hljs-keyword">type </span><span class="hljs-title">Wibble</span>(<span class="hljs-variable">a</span>, <span class="hljs-variable">b</span>) {
  <span class="hljs-title">Wibble</span>(<span class="hljs-variable">a</span>, <span class="hljs-variable">i</span>: <span class="hljs-title">Int</span>)
  <span class="hljs-title">Wobble</span>(<span class="hljs-variable">b</span>: <span class="hljs-variable">b</span>, <span class="hljs-variable">c</span>: <span class="hljs-title">String</span>)
}</code></pre>

-- CONSTRUCTORS

<pre><code><span class="hljs-title">Wibble</span>(<span class="hljs-variable">a</span>, <span class="hljs-variable">i</span>: <span class="hljs-title">Int</span>)</code></pre>

<pre><code><span class="hljs-title">Wobble</span>(<span class="hljs-variable">b</span>: <span class="hljs-variable">b</span>, <span class="hljs-variable">c</span>: <span class="hljs-title">String</span>)</code></pre>
