compiler-core/src/docs/snapshots/gleam_core__docs__tests__highlight_opaque_custom_type.snap
---
source: compiler-core/src/docs/tests.rs
expression: output
---
---- TYPES

--- Wibble
<pre><code><span class="hljs-keyword">pub </span><span class="hljs-keyword">opaque type </span><span class="hljs-title">Wibble</span>(<span class="hljs-variable">a</span>, <span class="hljs-variable">b</span>)</code></pre>
