compiler-core/src/docs/snapshots/gleam_core__docs__tests__ignored_argument_is_called_arg.snap
---
source: compiler-core/src/docs/tests.rs
expression: "pub fn one(_) { 1 }"
---
<!-- Page: app.html -->

<!-- Selector: .member:has(#one) -->
<div class="member">
    <div class="member-name">
      <h2 id="one">
        <a href="#one">
          one
        </a>
      </h2>
      
    </div>

    <pre><code class="hljs gleam">pub fn one(arg: a) -&gt; Int</code></pre>
    
    <div class="rendered-markdown"></div>
  </div>
