compiler-core/src/docs/snapshots/gleam_core__docs__tests__internal_definitions_are_not_included.snap
---
source: compiler-core/src/docs/tests.rs
expression: "html_page_to_string(compile(config, modules), vec![\".content\", \".sidebar\"])"
---
<!-- Page: app.html -->

<!-- Selector: .content -->
<main class="content">
        
<h1 class="module-name" id="module-name">
  <a href="#module-name">app</a>
  <svg class="icon icon-gleam-chasse"><use xlink:href="#icon-gleam-chasse"></use></svg>
</h1>






      </main>

<!-- Selector: .sidebar -->
<nav class="sidebar">
        <button class="sidebar-toggle" tabindex="1">
          <svg alt="Close Menu" class="label icon icon-x-circle" title="Close Menu"><use xlink:href="#icon-x-circle"></use></svg>
        </button>

        

        
        <h2>Links</h2>
        <ul>
        
          <li><a href="https://hex.pm/packages/test_project_name">Hex</a></li>
        
        </ul>
        

        <h2>Modules</h2>
        <ul>
        
          <li><a class="module-link" href="./app.html">app</a></li>
        
        </ul>

        




      </nav>
