compiler-core/src/docs/snapshots/gleam_core__docs__tests__internal_type_reexport_in_different_module.snap
---
source: compiler-core/src/docs/tests.rs
expression: output
---
---- SOURCE CODE
-- other.gleam
@internal pub type Internal

-- main.gleam

import other

pub type External =
  other.Internal


---- TYPES

--- External
<pre><code>pub type External =
  @internal Internal</code></pre>
